Fix map controls overflow-scroll

--- a/cosinnus/static/less/map.less
+++ b/cosinnus/static/less/map.less
@@ -297,6 +297,7 @@
     background-color: @map-tile-background-color;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
     
     .tile-contents {
         flex-grow: 1;
